tests/validprograms/project/test_scope_3.tds
Program {
	Int x(Int x) {
		return x;
	}

	void main() {

	}
}

