tests/invalidprograms/semantic/var_as_function.tds
Program {
	Int x = 0;
	
	void main() {
		x();
	}
}

